Styled views and search for trainers; Fixed the tab styling so that there is no overflow, and added customized styling to cards displaying dogs or trainers for consistency. Added spacing and styled radio buttons to the programs page for the business side.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,12 @@
     overflow-x:hidden;
   }
 
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
   .content {
     height: calc(100vh - 50px);
     padding: 0.5rem;
@@ -172,13 +178,21 @@
     }
 
     .services {
-      white-space: nowrap;
       overflow-x: auto;
     }
 
     .services span {
       display: inline-block;
-      white-space: nowrap;
+    }
+
+    .serviceIndv {
+      display: inline-block;
+      padding: 10px;
+      margin: 10px;
+      border-radius: 3px;
+      border:2px solid #2013357e;
+      color: #201335;
+      cursor: default;
     }
 
   .form-group {
@@ -438,6 +452,10 @@
   /* End of Forms */
 
   /* Custom navbar-toggler-icon */
+    .navbar {
+      max-width: 100vw;
+    }
+
   .custom-toggler .navbar-toggler-icon {
     width: 35px;
     height: 3px;
@@ -782,6 +800,7 @@
     .tabR-four-htm,
     .tabR-five-htm {
       /* Initially hide tab content */
+      max-width: 500px;
       display: none;
     }
 
